[tool.poetry]
name = "guniex"
version = "0.1.0"
description = ""
authors = ["Ayush <ayushshanker@outlook.in>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
